[package]
name = "libp2p-quic"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "TLS based QUIC transport implementation for libp2p"
repository = "https://github.com/libp2p/rust-libp2p"
license = "MIT"

[dependencies]
if-watch = "2.0.0"
libp2p-core = { version = "0.36.0", path = "../../core" }
libp2p-tls = { version = "0.1.0", path = "../tls" }
quinn = { version = "0.8.0", git = "https://github.com/kpp/quinn.git", branch = "parity_master", features = ["tls-rustls", "futures-io", "futures-core", "runtime-async-std"] }
futures = "0.3.21"
thiserror = "1.0.26"
tracing = "0.1"
rand = "0.8.5"
rustls = { version = "0.20.2", default-features = false }

[dev-dependencies]
anyhow = "1.0.41"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.50"
libp2p = { version = "0.49.0", default-features = false, features = ["request-response"], path = "../.." }
tracing-subscriber = {version = "0.3.8", features = ["env-filter"] }
